--- a/index.html
+++ b/index.html
@@ -17,98 +17,112 @@
     </div>
     <div class="navbar">
       <!-- !Home -->
-      <div id="main-home-navbar" class="main-home-navbar" style="display: none">
-        <div class="navbar-home-link-containers">
-          <div class="navbar-home-link-img-container">
-            <div class="navbar-home-link-img">
-              <img class="Square" src="assets/img/download.jfif" alt="" />
+      <div id="main-home-navbar" style="display: none" class="main-home-div">
+        <div class="main-home-container">
+          <div class="home-info-container">
+            <div class="home-img-container">
+              <div class="navbar-home-link-img">
+                <img class="Square" src="assets/img/download.jfif" alt="" />
+              </div>
             </div>
-            <div class="navbar-home-link-container">
-              <div class="navbar-home-links">
-                <div class="navbar-home-links-container">
-                  <a href="https://www.youtube.com">
-                    <div class="navbar-home-link-block">
-                      <img src="https://i.gifer.com/Paz.gif" />
-                      Youtube
-                    </div>
-                  </a>
-                  <a href="https://www2.movies7.to">
-                    <div class="navbar-home-link-block">
-                      <img src="https://i.gifer.com/Z0BZ.gif" />
-                      Movie
-                    </div>
-                  </a>
-                  <a href="https://www.twitch.tv">
-                    <div class="navbar-home-link-block">
-                      <img src="https://i.gifer.com/6oa.gif" />
-                      Twtich
-                    </div>
-                  </a>
-                  <a href="">
-                    <div class="navbar-home-link-block">
-                      <img src="https://i.gifer.com/YOPR.gif" />
-                      Unknown
-                    </div>
-                  </a>
-                </div>
-                <div class="navbar-home-links-container">
-                  <a
-                    href="https://www.notion.so/Welcome-f61a99d2402b4411a9c340c739074d42"
-                  >
-                    <div class="navbar-home-link-block">
-                      <img src="https://i.gifer.com/6mz.gif" />
-                      Notion
-                    </div>
-                  </a>
-                  <a href="https://github.com">
-                    <div class="navbar-home-link-block">
-                      <img src="https://i.gifer.com/XDZT.gif" />
-                      Github
-                    </div>
-                  </a>
-                  <a href="https://mail.google.com/mail/u/0/">
-                    <div class="navbar-home-link-block">
-                      <img src="https://i.gifer.com/4tyx.gif" />
-                      Gmail
-                    </div>
-                  </a>
-                  <a href="">
-                    <div class="navbar-home-link-block">
-                      <img src="https://i.gifer.com/YOPR.gif" />
-                      Unknown
-                    </div>
-                  </a>
-                </div>
-                <div
-                  class="navbar-home-links-container"
-                  style="margin-top: 10.5px"
+            <div class="home-lings-container">
+              <div class="home-grid-item">
+                <a href="https://www.youtube.com">
+                  <div class="navbar-home-link-block">
+                    <img src="https://i.gifer.com/Paz.gif" />
+                    Youtube
+                  </div>
+                </a>
+              </div>
+              <div class="home-grid-item">
+                <a
+                  href="https://www.notion.so/Welcome-f61a99d2402b4411a9c340c739074d42"
                 >
-                  <a href="https://vault.bitwarden.com/#/">
-                    <div class="navbar-home-link-block">
-                      <img src="assets/img/hmm.png" />
-                      Bitwarden
-                    </div>
-                  </a>
-
-                  <a href="https://snapdrop.net">
-                    <div class="navbar-home-link-block">
-                      <img src="https://i.gifer.com/3IU0.gif" />
-                      Snapdrop
-                    </div>
-                  </a>
-                  <a href="">
-                    <div class="navbar-home-link-block">
-                      <img src="https://i.gifer.com/YOPR.gif" />
-                      Unknown
-                    </div>
-                  </a>
-                  <a href="">
-                    <div class="navbar-home-link-block">
-                      <img src="https://i.gifer.com/YOPR.gif" />
-                      Unknown
-                    </div>
-                  </a>
-                </div>
+                  <div class="navbar-home-link-block">
+                    <img src="https://i.gifer.com/6mz.gif" />
+                    Notion
+                  </div>
+                </a>
+              </div>
+              <div class="home-grid-item">
+                <a href="https://vault.bitwarden.com/#/">
+                  <div class="navbar-home-link-block">
+                    <img src="assets/img/hmm.png" />
+                    Bitwarden
+                  </div>
+                </a>
+              </div>
+              <div class="home-grid-item">
+                <a href="https://www2.movies7.to">
+                  <div class="navbar-home-link-block">
+                    <img src="https://i.gifer.com/Z0BZ.gif" />
+                    Movie
+                  </div>
+                </a>
+              </div>
+              <div class="home-grid-item">
+                <a href="https://github.com">
+                  <div class="navbar-home-link-block">
+                    <img src="https://i.gifer.com/XDZT.gif" />
+                    Github
+                  </div>
+                </a>
+              </div>
+              <div class="home-grid-item">
+                <a href="https://snapdrop.net">
+                  <div class="navbar-home-link-block">
+                    <img src="https://i.gifer.com/3IU0.gif" />
+                    Snapdrop
+                  </div>
+                </a>
+              </div>
+              <div class="home-grid-item">
+                <a href="https://www.twitch.tv">
+                  <div class="navbar-home-link-block">
+                    <img src="https://i.gifer.com/6oa.gif" />
+                    Twtich
+                  </div>
+                </a>
+              </div>
+              <div class="home-grid-item">
+                <a href="https://mail.google.com/mail/u/0/">
+                  <div class="navbar-home-link-block">
+                    <img src="https://i.gifer.com/4tyx.gif" />
+                    Gmail
+                  </div>
+                </a>
+              </div>
+              <div class="home-grid-item">
+                <a href="">
+                  <div class="navbar-home-link-block">
+                    <img src="https://i.gifer.com/YOPR.gif" />
+                    Unknown9
+                  </div>
+                </a>
+              </div>
+              <div class="home-grid-item">
+                <a href="">
+                  <div class="navbar-home-link-block">
+                    <img src="https://i.gifer.com/YOPR.gif" />
+                    Unknown10
+                  </div>
+                </a>
+              </div>
+              <div class="home-grid-item">
+                <a href="">
+                  <div class="navbar-home-link-block">
+                    <img src="https://i.gifer.com/YOPR.gif" />
+                    Unknown11
+                  </div>
+                </a>
+              </div>
+              <div class="home-grid-item">
+                <a href="">
+                  <div class="navbar-home-link-block">
+                    <img src="https://i.gifer.com/YOPR.gif" />
+                    Unknown12
+                  </div>
+                </a>
               </div>
             </div>
           </div>
