--- a/index.html
+++ b/index.html
@@ -4,146 +4,38 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
     <link rel="stylesheet" href="assets/style/style.css" />
+    <title>Document</title>
   </head>
   <body>
-    <div class="landscape">
-      <div class="sun-container sun-container-1"></div>
-      <div class="sun-container">
-        <div class="sun" id="sun"></div>
-        <div class="moon" id="moon"></div>
-      </div>
-    </div>
-    <div class="navbar">
-      <!-- !Home -->
-      <div id="main-home-navbar" style="display: none" class="main-home-div">
-        <div class="main-home-container">
-          <div class="home-info-container">
-            <div class="home-img-container">
-              <div class="navbar-home-link-img">
-                <img class="Square" src="assets/img/download.jfif" alt="" />
-              </div>
-            </div>
-            <div class="home-lings-container">
-              <div class="home-grid-item">
-                <a href="https://www.youtube.com">
-                  <div class="navbar-home-link-block">
-                    <img src="https://i.gifer.com/Paz.gif" />
-                    Youtube
-                  </div>
-                </a>
-              </div>
-              <div class="home-grid-item">
-                <a
-                  href="https://www.notion.so/Welcome-f61a99d2402b4411a9c340c739074d42"
-                >
-                  <div class="navbar-home-link-block">
-                    <img src="https://i.gifer.com/6mz.gif" />
-                    Notion
-                  </div>
-                </a>
-              </div>
-              <div class="home-grid-item">
-                <a href="https://vault.bitwarden.com/#/">
-                  <div class="navbar-home-link-block">
-                    <img src="assets/img/hmm.png" />
-                    Bitwarden
-                  </div>
-                </a>
-              </div>
-              <div class="home-grid-item">
-                <a href="https://www2.movies7.to">
-                  <div class="navbar-home-link-block">
-                    <img src="https://i.gifer.com/Z0BZ.gif" />
-                    Movie
-                  </div>
-                </a>
-              </div>
-              <div class="home-grid-item">
-                <a href="https://github.com">
-                  <div class="navbar-home-link-block">
-                    <img src="https://i.gifer.com/XDZT.gif" />
-                    Github
-                  </div>
-                </a>
-              </div>
-              <div class="home-grid-item">
-                <a href="https://snapdrop.net">
-                  <div class="navbar-home-link-block">
-                    <img src="https://i.gifer.com/3IU0.gif" />
-                    Snapdrop
-                  </div>
-                </a>
-              </div>
-              <div class="home-grid-item">
-                <a href="https://www.twitch.tv">
-                  <div class="navbar-home-link-block">
-                    <img src="https://i.gifer.com/6oa.gif" />
-                    Twtich
-                  </div>
-                </a>
-              </div>
-              <div class="home-grid-item">
-                <a href="https://mail.google.com/mail/u/0/">
-                  <div class="navbar-home-link-block">
-                    <img src="https://i.gifer.com/4tyx.gif" />
-                    Gmail
-                  </div>
-                </a>
-              </div>
-              <div class="home-grid-item">
-                <a href="">
-                  <div class="navbar-home-link-block">
-                    <img src="https://i.gifer.com/YOPR.gif" />
-                    Unknown9
-                  </div>
-                </a>
-              </div>
-              <div class="home-grid-item">
-                <a href="">
-                  <div class="navbar-home-link-block">
-                    <img src="https://i.gifer.com/YOPR.gif" />
-                    Unknown10
-                  </div>
-                </a>
-              </div>
-              <div class="home-grid-item">
-                <a href="">
-                  <div class="navbar-home-link-block">
-                    <img src="https://i.gifer.com/YOPR.gif" />
-                    Unknown11
-                  </div>
-                </a>
-              </div>
-              <div class="home-grid-item">
-                <a href="">
-                  <div class="navbar-home-link-block">
-                    <img src="https://i.gifer.com/YOPR.gif" />
-                    Unknown12
-                  </div>
-                </a>
-              </div>
-            </div>
+    <section id="welcome">
+      <div class="container">
+        <a href="bookmarks.html">
+          <div class="left-container arrow-container">
+            <span class="iconify arrows" data-icon="ep:d-arrow-left"></span>
+          </div>
+        </a>
+        <div class="mid-container">
+          <div class="clock">
+            <div id="hrs"></div>
+            <div class="marks">:</div>
+            <div class="clock-dark" id="min"></div>
+            <div id="weekday"></div>
+            <div class="marks">/</div>
+            <div class="clock-dark" id="date"></div>
+            <div class="clock-dark">st</div>
+            <div class="marks">/</div>
+            <div class="clock-dark" id="month"></div>
           </div>
         </div>
+        <a href="bookmarks.html">
+          <div class="right-container arrow-container">
+            <span class="iconify arrows" data-icon="ep:d-arrow-right"></span>
+          </div>
+        </a>
       </div>
-      <!-- !Home end-->
-      <div class="navbar-icons-container">
-        <div id="icons" class="navbar-icons">
-          <div class="icon" id="home">
-            <span class="iconify" data-icon="bx:bxs-lock"></span>
-          </div>
-          <div class="icon">
-            <span class="iconify" data-icon="ant-design:home-filled"></span>
-          </div>
-          <div class="icon">
-            <span class="iconify" data-icon="simple-icons:myanimelist"></span>
-          </div>
-        </div>
-      </div>
-    </div>
-    <script src="assets/script/script.js"></script>
+    </section>
     <script src="https://code.iconify.design/2/2.1.0/iconify.min.js"></script>
+    <script src="assets/script/script.js"></script>
   </body>
 </html>
