--- a/index.html
+++ b/index.html
@@ -1,41 +1,251 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="assets/style/style.css" />
-    <title>Document</title>
-  </head>
-  <body>
-    <section id="welcome">
-      <div class="container">
-        <a href="bookmarks.html">
-          <div class="left-container arrow-container">
-            <span class="iconify arrows" data-icon="ep:d-arrow-left"></span>
-          </div>
-        </a>
-        <div class="mid-container">
-          <div class="clock">
-            <div id="hrs"></div>
-            <div class="marks">:</div>
-            <div class="clock-dark" id="min"></div>
-            <div id="weekday"></div>
-            <div class="marks">/</div>
-            <div class="clock-dark" id="date"></div>
-            <div class="clock-dark">st</div>
-            <div class="marks">/</div>
-            <div class="clock-dark" id="month"></div>
-          </div>
-        </div>
-        <a href="bookmarks.html">
-          <div class="right-container arrow-container">
-            <span class="iconify arrows" data-icon="ep:d-arrow-right"></span>
-          </div>
-        </a>
-      </div>
-    </section>
-    <script src="https://code.iconify.design/2/2.1.0/iconify.min.js"></script>
-    <script src="assets/script/script.js"></script>
-  </body>
-</html>
+<!--Starpage by -->
+<html>
+<head>
+	<meta charset="utf-8">
+	<title>~</title>
+	<link rel="stylesheet" href="assets/style/general.css" />
+</head>
+<body>
+	<div class="main" style="display: block;">
+		<div class="image-wrapper">
+
+			<div class="mySlides fade">
+				<img src="assets/imgs/side1.gif">
+			</div>
+
+			<div class="mySlides fade">
+				<img src="assets/imgs/side2.gif">
+			</div>
+
+			<div class="mySlides fade">
+				<img src="assets/imgs/side3.gif">
+			</div>
+
+			<div class="mySlides fade">
+				<img src="assets/imgs/side4.gif">
+			</div>
+
+			<div class="mySlides fade">
+				<img src="assets/imgs/side5.gif">
+			</div>
+
+			<div class="mySlides fade">
+				<img src="assets/imgs/side6.gif">
+			</div>
+
+			<div class="mySlides fade">
+				<img src="assets/imgs/side7.gif">
+			</div>
+
+			<div class="mySlides fade">
+				<img src="assets/imgs/side8.gif">
+			</div>
+
+			<div class="mySlides fade">
+				<img src="assets/imgs/side9.gif">
+			</div>
+
+			<div class="mySlides fade">
+				<img src="assets/imgs/side10.gif">
+			</div>
+
+			<div class="mySlides fade">
+				<img src="assets/imgs/side11.gif">
+			</div>
+
+			<div class="mySlides fade">
+				<img src="assets/imgs/side12.gif">
+			</div>
+
+			<div class="mySlides fade">
+				<img src="assets/imgs/side13.gif">
+			</div>
+
+			<div class="mySlides fade">
+				<img src="assets/imgs/side14.gif">
+			</div>
+
+			<div class="mySlides fade">
+				<img src="assets/imgs/side15.gif">
+			</div>
+
+			<div class="mySlides fade">
+				<img src="assets/imgs/side16.gif">
+			</div>
+
+			<div class="mySlides fade">
+				<img src="assets/imgs/side17.gif">
+			</div>
+
+			<div class="mySlides fade">
+				<img src="assets/imgs/side18.gif">
+			</div>
+
+			<div class="mySlides fade">
+				<img src="assets/imgs/side19.gif">
+			</div>
+
+			<div class="mySlides fade">
+				<img src="assets/imgs/side20.gif">
+			</div>
+
+			<div class="mySlides fade">
+				<img src="assets/imgs/side21.gif">
+			</div>
+
+			<div class="mySlides fade">
+				<img src="assets/imgs/side22.gif">
+			</div>
+
+
+			<div class="mySlides fade">
+				<img src="assets/imgs/side23.gif">
+			</div>
+
+
+			<a class="next" onclick="plusSlides(1)">&#8734;</a>
+		</div>
+		<br>
+
+		<div style="text-align:center">
+			<span class="reqdVar" onclick="currentSlide(1)"></span>
+			<span class="reqdVar" onclick="currentSlide(2)"></span>
+			<span class="reqdVar" onclick="currentSlide(3)"></span>
+			<span class="reqdVar" onclick="currentSlide(4)"></span>
+			<span class="reqdVar" onclick="currentSlide(5)"></span>
+			<span class="reqdVar" onclick="currentSlide(6)"></span>
+			<span class="reqdVar" onclick="currentSlide(7)"></span>
+			<span class="reqdVar" onclick="currentSlide(8)"></span>
+			<span class="reqdVar" onclick="currentSlide(9)"></span>
+			<span class="reqdVar" onclick="currentSlide(10)"></span>
+			<span class="reqdVar" onclick="currentSlide(11)"></span>
+			<span class="reqdVar" onclick="currentSlide(12)"></span>
+			<span class="reqdVar" onclick="currentSlide(13)"></span>
+			<span class="reqdVar" onclick="currentSlide(14)"></span>
+			<span class="reqdVar" onclick="currentSlide(15)"></span>
+			<span class="reqdVar" onclick="currentSlide(16)"></span>
+			<span class="reqdVar" onclick="currentSlide(17)"></span>
+			<span class="reqdVar" onclick="currentSlide(18)"></span>
+			<span class="reqdVar" onclick="currentSlide(19)"></span>
+			<span class="reqdVar" onclick="currentSlide(20)"></span>
+			<span class="reqdVar" onclick="currentSlide(21)"></span>
+			<span class="reqdVar" onclick="currentSlide(22)"></span>
+			<span class="reqdVar" onclick="currentSlide(23)"></span>
+		</div>
+
+		<header>
+			<br>
+			<h1><span class="flair">Welcome</span></h1>
+		</header>
+
+		<nav>
+			<br>
+			<ul class="blue">
+				<a style="font-size:22px">Social</a>
+				<li><a href="https://www.youtube.com">Youtube</a></li>
+				<li><a href="https://www.netflix.com/">NetFlix</a></li>
+				<li><a href="https://reddit.com/">Reddit</a></li>
+				<li><a href="https://twitter.com/">Twitter</a></li>
+				<li><a href="https://estonianworld.com/">Estonia WL</a></li>
+				<li><a href="https://www.nytimes.com/column/the-daily">Daily</a></li>
+				<li><a href="https://www.bbc.com/news">BBC</a></li>
+			</ul>
+
+			<ul class="green">
+				<a style="font-size:22px">Study</a>
+				<li><a href="https://github.com/">Github</a></li>
+				<li><a href="https://www.netlify.com/">Netlify</a></li>
+				<li><a href="https://toggl.com/">Toggl</a></li>
+				<li><a href="https://www.nitrotype.com/">NitroType</a></li>
+				<li><a href="https://www.ratatype.com/">RataType</a></li>
+				<li><a href="https://www.keybr.com/">KeyBR</a></li>
+				<li><a href="https://javascript.info/">Javascript</a></li>
+			</ul>
+
+			<ul class="red">
+				<a style="font-size:22px">Home</a>
+				<li><a href="https://www.notion.so/Welcome-f61a99d2402b4411a9c340c739074d42">Notion</a></li>
+				<li><a href="https://vault.bitwarden.com/#/">Bitwarden</a></li>
+				<li><a href="https://9anime.to/">9anime</a></li>
+				<li><a href="https://www1.gogoanime.movie/">Gogoanime</a></li>
+			</ul>
+
+			<ul class="yellow">
+				<a style="font-size:22px">Else</a>
+				<li><a href="https://gmail.com/">Gmail</a></li>
+				<li><a href="https://drive.google.com/drive/my-drive">Drive</a></li>
+				<li><a href="https://snapdrop.net/">Snapdrop</a></li>
+				<li><a href="https://katcr.to/">Katcr</a></li>
+				<li><a href="https://1337x.to/">1337x</a></li>
+				<li><a href="https://www2.movies7.to/">Movie</a></li>
+				<li><a href="https://www.nasdaq.com/">Stock</a></li>
+			</ul>
+		</nav>
+		<div class="codes" id="codes">
+			<script>
+			//document.getElementById("main").innerHTML = Date();
+			function updateClock() {
+				var days = ['SUNDAY','MONDAY','TUESDAY','WEDNESDAY','THURSDAY','FRIDAY','SATURDAY'];
+				var m = new Date();
+				var dateString =
+				(days[ m.getDay() ]) + " " +
+				("0" + m.getDate()).slice(-2) + "/" +
+				("0" + (m.getMonth()+1)).slice(-2) +"/"+
+				m.getFullYear() +" "+
+				("0" + m.getHours()).slice(-2) + ":" +
+				("0" + m.getMinutes()).slice(-2) + ":" +
+				("0" + m.getSeconds()).slice(-2);
+
+				// set the content of the element with the ID codes to the formatted string
+				document.getElementById('codes').innerHTML = dateString;
+
+				// call this function again in 1000ms
+				setTimeout(updateClock, 1000);
+			}
+			updateClock(); // initial call
+
+			// Set local storage
+			var slideIx = Number(localStorage.getItem('slideIndex') || 1);
+
+			var slideIndex = slideIx;
+			showSlides(slideIndex);
+
+			// Next/previous controls
+			function plusSlides(n) {
+				showSlides(slideIndex += n);
+				localStorage.setItem('slideIndex', slideIndex);
+				console.log(localStorage.getItem('slideIndex'));
+			}
+
+			// Thumbnail image controls
+			function currentSlides(n) {
+				showSlides(slideIndex = n);
+				localStorage.setItem('slideIndex', slideIndex);
+				console.log(localStorage.getItem('slideIndex'));
+			}
+
+			// Show slides
+			function showSlides(n) {
+				var i;
+				var slides = document.getElementsByClassName("mySlides");
+				var reqdVars = document.getElementsByClassName("reqdVar");
+				if (n > slides.length) {
+					slideIndex = 1;
+				}
+				if (n < 1) {
+					slideIndex = slides.length;
+				}
+				for (i = 0; i < slides.length; i++) {
+					slides[i].style.display = "none";
+				}
+				for (i = 0; i < reqdVars.length; i++) {
+					reqdVars[i].className = reqdVars[i].className.replace(" active", "");
+				}
+				slides[slideIndex-1].style.display = "block";
+				reqdVars[slideIndex-1].className += " active";
+			}
+			</script>
+		</div>
+	</body>
+	</html>
