--- a/index.html
+++ b/index.html
@@ -141,45 +141,34 @@
 
 		<nav>
 			<br>
-			<ul class="blue">
-				<a style="font-size:22px">Social</a>
-				<li><a href="https://www.youtube.com">Youtube</a></li>
-				<li><a href="https://www.netflix.com/">NetFlix</a></li>
-				<li><a href="https://reddit.com/">Reddit</a></li>
-				<li><a href="https://twitter.com/">Twitter</a></li>
-				<li><a href="https://estonianworld.com/">Estonia WL</a></li>
-				<li><a href="https://www.nytimes.com/column/the-daily">Daily</a></li>
-				<li><a href="https://www.bbc.com/news">BBC</a></li>
-			</ul>
-
 			<ul class="green">
-				<a style="font-size:22px">Study</a>
-				<li><a href="https://github.com/">Github</a></li>
-				<li><a href="https://www.netlify.com/">Netlify</a></li>
-				<li><a href="https://toggl.com/">Toggl</a></li>
-				<li><a href="https://www.nitrotype.com/">NitroType</a></li>
-				<li><a href="https://www.ratatype.com/">RataType</a></li>
-				<li><a href="https://www.keybr.com/">KeyBR</a></li>
-				<li><a href="https://javascript.info/">Javascript</a></li>
-			</ul>
-
-			<ul class="red">
-				<a style="font-size:22px">Home</a>
-				<li><a href="https://www.notion.so/Welcome-f61a99d2402b4411a9c340c739074d42">Notion</a></li>
+				<a style="font-size:22px">Daily</a>
+				<li><a href="https://docs.google.com/spreadsheets/d/1o7UVflc-YgG8DFLHvee0Mv4Ij-raPF-l-GATx-buwtI/edit?pli=1&gid=0#gid=0">Excel Tracking</a></li>
+				<li><a  href="https://chatgpt.com/">ChatGPT</a></li>
+				<li><a href="https://www.notion.so/Home-Station-f694799c31ef438e90fb4b02af3b6120">Notion</a></li>
 				<li><a href="https://vault.bitwarden.com/#/">Bitwarden</a></li>
-				<li><a href="https://9anime.to/">9anime</a></li>
-				<li><a href="https://www1.gogoanime.movie/">Gogoanime</a></li>
 			</ul>
-
+			<ul class="blue">
+				<a style="font-size:22px">Youtbe</a>
+				<li><a href="https://www.youtube.com/">Youtube Home</a></li>
+				<li><a  href="https://www.youtube.com/playlist?list=PLGlkTReTM-9NqpIZoZTp5ntRAuwF1PsEq">Youtube Study</a></li>
+				<li><a  href="https://www.youtube.com/playlist?list=PLGlkTReTM-9M2lq1LSTP7MobFy78qwwpi">Youtube POV</a></li>
+				<li><a  href="https://www.youtube.com/playlist?list=PLGlkTReTM-9Omn1WCNHBaOpn9uHn3e1oh">Youtbe Entertaiment</a></li>
+			</ul>
 			<ul class="yellow">
 				<a style="font-size:22px">Else</a>
 				<li><a href="https://gmail.com/">Gmail</a></li>
 				<li><a href="https://drive.google.com/drive/my-drive">Drive</a></li>
 				<li><a href="https://snapdrop.net/">Snapdrop</a></li>
-				<li><a href="https://katcr.to/">Katcr</a></li>
-				<li><a href="https://1337x.to/">1337x</a></li>
-				<li><a href="https://www2.movies7.to/">Movie</a></li>
-				<li><a href="https://www.nasdaq.com/">Stock</a></li>
+				<li><a href="https://github.com/">Github</a></li>
+				<li><a href="https://www.netlify.com/">Netlify</a></li>
+				<li><a href="https://www.reddit.com/r/FREEMEDIAHECKYEAH/wiki/video/#wiki_.25B7_streaming_apis">Reddit Moves</a></li>
+			</ul>
+			<ul class="red">
+				<a style="font-size:22px">Home</a>
+				<li><a href="">temp1</a></li>
+				<li><a href="">temp2/a></li>
+				<li><a href="">temp2</a></li>
 			</ul>
 		</nav>
 		<div class="codes" id="codes">
@@ -249,3 +238,4 @@
 		</div>
 	</body>
 	</html>
+
