--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <br>
       <ul class="green">
         <li class="section-title">Daily</li>
-        <li><a href="https://docs.google.com/spreadsheets/d/1o7UVflc-YgG8DFLHvee0Mv4Ij-raPF-l-GATx-buwtI/edit?pli=1&gid=0#gid=0">Excel Tracking</a></li>
+        <li><a href="https://docs.google.com/spreadsheets/d/1o7UVflc-YgG8DFLHvee0Mv4Ij-raPF-l-GATx-buwtI/edit?pli=1&gid=0#gid=0">Tracking</a></li>
         <li><a href="https://chatgpt.com/">ChatGPT</a></li>
         <li><a href="https://www.notion.so/Home-Station-f694799c31ef438e90fb4b02af3b6120">Notion</a></li>
         <li><a href="https://vault.bitwarden.com/#/">Bitwarden</a></li>
@@ -184,3 +184,4 @@
   </script>
 </body>
 </html>
+
