--- a/index.html
+++ b/index.html
@@ -4,32 +4,20 @@
   <meta charset="utf-8" />
   <title>~</title>
   <link rel="stylesheet" href="assets/style/general.css" />
-  <style>
-    /* tiny quality-of-life defaults in case CSS isn't loaded yet */
-    .image-wrapper { position: relative; max-width: 100%; }
-    .mySlides { display: none; }
-    .mySlides img { width: 100%; display: block; }
-    .next { position: absolute; right: 8px; top: 50%; transform: translateY(-50%); cursor: pointer; }
-    .reqdVar { display: inline-block; width: 10px; height: 10px; border-radius: 50%; margin: 2px; border: 1px solid currentColor; cursor: pointer; }
-    .reqdVar.active { background: currentColor; }
-    nav ul { list-style: none; padding-left: 0; }
-    nav ul li.section-title { font-size: 22px; font-weight: 600; margin: 6px 0; }
-    header h1 { margin: .5rem 0 0; }
-    #codes { margin: .5rem 0; font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace; }
-  </style>
 </head>
 <body>
-  <div class="main" style="display:block;">
+  <div class="main">
+    <!-- Slideshow column on the right -->
     <div class="image-wrapper">
-      <div class="mySlides fade"><img src="assets/imgs/side1.gif" alt="slide 1"></div>
-      <div class="mySlides fade"><img src="assets/imgs/side2.gif" alt="slide 2"></div>
-      <div class="mySlides fade"><img src="assets/imgs/side3.gif" alt="slide 3"></div>
-      <div class="mySlides fade"><img src="assets/imgs/side4.gif" alt="slide 4"></div>
-      <div class="mySlides fade"><img src="assets/imgs/side5.gif" alt="slide 5"></div>
-      <div class="mySlides fade"><img src="assets/imgs/side6.gif" alt="slide 6"></div>
-      <div class="mySlides fade"><img src="assets/imgs/side7.gif" alt="slide 7"></div>
-      <div class="mySlides fade"><img src="assets/imgs/side8.gif" alt="slide 8"></div>
-      <div class="mySlides fade"><img src="assets/imgs/side9.gif" alt="slide 9"></div>
+      <div class="mySlides fade"><img src="assets/imgs/side1.gif"  alt="slide 1"></div>
+      <div class="mySlides fade"><img src="assets/imgs/side2.gif"  alt="slide 2"></div>
+      <div class="mySlides fade"><img src="assets/imgs/side3.gif"  alt="slide 3"></div>
+      <div class="mySlides fade"><img src="assets/imgs/side4.gif"  alt="slide 4"></div>
+      <div class="mySlides fade"><img src="assets/imgs/side5.gif"  alt="slide 5"></div>
+      <div class="mySlides fade"><img src="assets/imgs/side6.gif"  alt="slide 6"></div>
+      <div class="mySlides fade"><img src="assets/imgs/side7.gif"  alt="slide 7"></div>
+      <div class="mySlides fade"><img src="assets/imgs/side8.gif"  alt="slide 8"></div>
+      <div class="mySlides fade"><img src="assets/imgs/side9.gif"  alt="slide 9"></div>
       <div class="mySlides fade"><img src="assets/imgs/side10.gif" alt="slide 10"></div>
       <div class="mySlides fade"><img src="assets/imgs/side11.gif" alt="slide 11"></div>
       <div class="mySlides fade"><img src="assets/imgs/side12.gif" alt="slide 12"></div>
@@ -48,9 +36,9 @@
       <a class="next" onclick="plusSlides(1)" aria-label="Next slide">&#8734;</a>
     </div>
 
-    <br>
-
-    <div style="text-align:center">
+    <!-- Dots under the slideshow -->
+    <div class="dots">
+      <!-- 23 dots -->
       <span class="reqdVar" onclick="currentSlide(1)"></span>
       <span class="reqdVar" onclick="currentSlide(2)"></span>
       <span class="reqdVar" onclick="currentSlide(3)"></span>
@@ -77,12 +65,11 @@
     </div>
 
     <header>
-      <br>
       <h1><span class="flair">Welcome</span></h1>
     </header>
 
-    <nav>
-      <br>
+    <!-- Nav columns -->
+    <nav class="links">
       <ul class="green">
         <li class="section-title">Daily</li>
         <li><a href="https://docs.google.com/spreadsheets/d/1o7UVflc-YgG8DFLHvee0Mv4Ij-raPF-l-GATx-buwtI/edit?pli=1&gid=0#gid=0">Tracking</a></li>
@@ -117,7 +104,7 @@
       </ul>
     </nav>
 
-    <div id="codes"></div>
+    <div id="codes" class="codes"></div>
   </div>
 
   <script>
@@ -133,10 +120,8 @@
         String(m.getHours()).padStart(2, '0') + ":" +
         String(m.getMinutes()).padStart(2, '0') + ":" +
         String(m.getSeconds()).padStart(2, '0');
-
       const el = document.getElementById('codes');
       if (el) el.textContent = dateString;
-
       setTimeout(updateClock, 1000);
     })();
 
@@ -146,22 +131,15 @@
 
     function showSlides(n) {
       const slides = document.getElementsByClassName("mySlides");
-      const dots = document.getElementsByClassName("reqdVar");
-      const total = slides.length;
+      const dots   = document.getElementsByClassName("reqdVar");
+      const total  = slides.length;
 
-      // wrap around
       if (n > total) slideIndex = 1;
-      if (n < 1) slideIndex = total;
+      if (n < 1)     slideIndex = total;
 
-      // hide all
-      for (let i = 0; i < total; i++) {
-        slides[i].style.display = "none";
-      }
-      for (let i = 0; i < dots.length; i++) {
-        dots[i].classList.remove("active");
-      }
+      for (let i = 0; i < total; i++) slides[i].style.display = "none";
+      for (let i = 0; i < dots.length; i++) dots[i].classList.remove("active");
 
-      // show current
       slides[slideIndex - 1].style.display = "block";
       if (dots[slideIndex - 1]) dots[slideIndex - 1].classList.add("active");
     }
@@ -172,16 +150,14 @@
       localStorage.setItem('slideIndex', String(slideIndex));
     }
 
-    // NOTE: original markup called currentSlide(…) but JS had currentSlides(…)
     function currentSlide(n) {
       slideIndex = n;
       showSlides(slideIndex);
       localStorage.setItem('slideIndex', String(slideIndex));
     }
 
-    // init after DOM is ready enough (script is at end of body, so safe)
+    // init
     showSlides(slideIndex);
   </script>
 </body>
 </html>
-
